--- a/app/src/main/res/layout/activity_lesson_completed.xml
+++ b/app/src/main/res/layout/activity_lesson_completed.xml
@@ -7,23 +7,22 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="br.com.englishapp.LessonCompletedActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/txt_message"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
     <ImageButton
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/congrats"
         android:onClick="nextLesson"
         android:id="@+id/congrats_image"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:layout_below="@id/txt_message"
+         />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/txt_book_name"
-        android:visibility="gone"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
