--- a/app/src/main/res/layout/activity_transition.xml
+++ b/app/src/main/res/layout/activity_transition.xml
@@ -5,13 +5,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:id="@+id/container_transition"
     tools:context="br.com.englishapp.TransitionActivity">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/exercise_image"
-        android:src="@drawable/verbs"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true" />
 </RelativeLayout>
