--- a/app/src/main/res/layout/activity_practice.xml
+++ b/app/src/main/res/layout/activity_practice.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container_practice"
     android:layout_width="match_parent"
@@ -8,51 +8,43 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".BookActivity">
+    tools:context=".BookActivity"
+    android:orientation="vertical">
 
-    <ProgressBar
-        android:id="@+id/progressBar1"
-        style="?android:attr/progressBarStyleHorizontal"
+    <LinearLayout
+        android:id="@+id/videoFrame"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_marginTop="28dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp" />
+        android:orientation="vertical"
+        android:visibility="gone"
+        >
 
-    <ScrollView
-        android:id="@+id/scrollView"
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/contentFrame"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/progressBar1">
+        android:orientation="vertical"
+        >
 
-        <LinearLayout
-            android:id="@+id/contentFrame"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+    </LinearLayout>
 
-        </LinearLayout>
-    </ScrollView>
+    <ImageView
+        android:id="@+id/mic"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/mic_disabled"
+        android:stateListAnimator="@anim/abc_fade_in" />
 
     <Button
-        android:id="@+id/btn"
-        android:layout_width="wrap_content"
+        android:id="@+id/btn_try_again"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/scrollView"
-        android:layout_centerHorizontal="true"
-        android:onClick="tryAgain"
-        android:visibility="gone"
         android:layout_marginTop="54dp"
-        android:text="@string/try_again" />
+        android:maxHeight="24dp"
+        android:onClick="tryAgain"
+        android:text="@string/try_again"
+        android:visibility="gone" />
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/micButton"
-        android:src="@drawable/mic_0"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+</LinearLayout>
 
-
-</RelativeLayout>
