--- a/app/src/main/res/layout/activity_book_completed.xml
+++ b/app/src/main/res/layout/activity_book_completed.xml
@@ -22,7 +22,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/congrats_image"
+        android:id="@+id/exit_btn"
         android:text="@string/exit"
         android:background="#0063CF"
         android:textColor="@android:color/white"
