--- a/app/src/main/res/layout/activity_lesson_completed.xml
+++ b/app/src/main/res/layout/activity_lesson_completed.xml
@@ -23,13 +23,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="nextLesson"
-        android:id="@+id/congrats_image"
+        android:id="@+id/congrats_image_btn"
         android:text="@string/go_to_next_lesson"
         android:background="#0063CF"
         android:textColor="@android:color/white"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/ponitstable"
+        android:src="@drawable/pointstable"
+        android:layout_above="@+id/congrats_image_btn"
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
