--- a/app/src/main/res/layout/activity_book_completed.xml
+++ b/app/src/main/res/layout/activity_book_completed.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/txt_message"
+        android:id="@+id/txt_correct"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         />
