--- a/app/src/main/res/layout/activity_lesson_completed.xml
+++ b/app/src/main/res/layout/activity_lesson_completed.xml
@@ -1,43 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:background="@drawable/congrats_bg"
-    android:id="@+id/container"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="br.com.englishapp.LessonCompletedActivity">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/txt_message"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        />
+    <RelativeLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/congrats_bg"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        tools:context="br.com.englishapp.LessonCompletedActivity">
 
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="nextLesson"
-        android:id="@+id/congrats_image_btn"
-        android:text="@string/go_to_next_lesson"
-        android:background="#0063CF"
-        android:textColor="@android:color/white"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        <ImageView
+            android:id="@+id/user_points"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/pointseight" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/ponitstable"
-        android:src="@drawable/pointstable"
-        android:layout_above="@+id/congrats_image_btn"
-        android:layout_centerHorizontal="true" />
+        <TextView
+            android:id="@+id/txt_start_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/user_points"
+            android:layout_centerHorizontal="true"
+            android:text="@string/placeholder"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+        <TextView
+            android:id="@+id/txt_finish_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/placeholder"
+            android:layout_below="@+id/txt_start_time"
+            android:layout_centerHorizontal="true"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+        <TextView
+            android:id="@+id/txt_correct"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/txt_finish_time"
+            android:layout_centerHorizontal="true"
+            android:text="@string/placeholder"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <TextView
+            android:id="@+id/txt_wrong_percentage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/txt_correct"
+            android:layout_centerHorizontal="true"
+            android:text="@string/placeholder"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <ImageView
+            android:id="@+id/ponitstable"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/txt_wrong_percentage"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/pointstable" />
+
+        <Button
+            android:id="@+id/congrats_image_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/ponitstable"
+            android:background="#0063CF"
+            android:onClick="nextLesson"
+            android:text="@string/go_to_next_lesson"
+            android:textColor="@android:color/white"
+            android:layout_alignEnd="@+id/user_points"
+            android:layout_alignStart="@+id/user_points" />
 
 
-</RelativeLayout>
+    </RelativeLayout>
+
+</ScrollView>
