adds wizard's logo to the initial screen

--- a/app/src/main/res/layout/activity_select_user.xml
+++ b/app/src/main/res/layout/activity_select_user.xml
@@ -2,40 +2,51 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#1a237e"
+    android:fillViewport="false">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/white"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:orientation="vertical"
         tools:context="br.com.englishapp.SelectUserActivity">
 
         <ImageView
-            android:id="@+id/welcome"
+            android:id="@+id/logo"
             android:layout_width="wrap_content"
+            android:background="@android:color/white"
+            android:paddingTop="@dimen/abc_action_button_min_width_material"
+            android:paddingBottom="@dimen/abc_action_button_min_width_material"
+            android:paddingRight="@dimen/abc_action_button_min_width_material"
+            android:paddingLeft="@dimen/abc_action_button_min_width_material"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:src="@drawable/welcome" />
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/logo"
+            />
 
         <EditText
+            android:textColor ="@android:color/white"
+            android:layout_marginTop="10dp"
             android:id="@+id/student_code"
             android:layout_width="wrap_content"
+            android:text="ST002"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/welcome"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="33dp"
-            android:ems="10" />
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal"
+            android:ems="10"/>
 
         <Button
             android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/student_code"
-            android:layout_centerHorizontal="true"
             android:layout_marginTop="30dp"
             android:onClick="findUser"
-            android:text="@string/log_in" />
+            android:background="#0063CF"
+            android:textColor="@android:color/white"
+            android:text="@string/log_in"
+            android:layout_gravity="center_horizontal" />
 
-    </RelativeLayout>
+    </LinearLayout>
 </ScrollView>
