--- a/app/src/main/res/layout/lesson_list_item.xml
+++ b/app/src/main/res/layout/lesson_list_item.xml
@@ -2,8 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="16dp"
+    android:background="@android:color/white"
     android:orientation="vertical"
+    android:paddingTop="16dp"
+    android:paddingBottom="16dp"
     android:weightSum="1">
 
     <LinearLayout
@@ -12,19 +14,26 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_width="90dp"
+            android:id="@+id/imgPadLock"
+            android:layout_height="match_parent"
+            android:src="@drawable/padlock_lock" />
 
-        <TextView
-            android:id="@+id/lessonName"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_weight="5"
-            android:text="Lesson 3"
-            android:textAllCaps="true"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
+            <TextView
+                android:id="@+id/lessonName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="5"
+                android:text="Lesson 3"
+                android:textAllCaps="true"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+
+
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
